@@ -23,6 +23,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>org.jboss</groupId>
+    <artifactId>jboss-parent</artifactId>
+    <version>9</version>
+  </parent>
   <groupId>org.gatein.wcm</groupId>
   <artifactId>gatein-wcm</artifactId>
   <version>0.0.1-SNAPSHOT</version>
@@ -31,6 +36,11 @@
   <scm>
     <url>https://github.com/lucasponce/gatein-wcm</url>
   </scm>
+  <issueManagement>
+    <system>jira</system>
+    <url>http://issues.jboss.org/browse/GTNWCM</url>
+  </issueManagement>
+
   <licenses>
     <license>
       <name>GNU Lesser General Public License</name>
@@ -47,6 +57,7 @@
     <jbossas-version>7.1.1.Final</jbossas-version>
     <jbossas7.assembly.descriptor.version>71</jbossas7.assembly.descriptor.version>
     <modeshape.version>3.1.1.Final</modeshape.version>
+    <chemistry.version>0.7.0</chemistry.version>
 
     <org.exoplatform.kernel.version>2.4.1-GA</org.exoplatform.kernel.version>
     <org.exoplatform.core.version>2.5.1-CP01</org.exoplatform.core.version>
@@ -55,6 +66,8 @@
     <maven.compiler.source>1.6</maven.compiler.source>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <arquillian.version>1.0.3.Final</arquillian.version>
+    <debug.argline />
+
   </properties>
 
   <modules>
@@ -63,8 +76,8 @@
     <!-- <module>gatein-wcm-portlets</module> -->
     <module>gatein-wcm-impl</module>
     <module>gatein-wcm-impl-sec</module>
-    <module>gatein-wcm-integration-tests</module>
     <module>gatein-wcm-distribution</module>
+    <module>gatein-wcm-integration-tests</module>
   </modules>
 
   <dependencyManagement>
@@ -151,6 +164,63 @@
 
   </dependencyManagement>
 
+
+  <build>
+    <!-- This section defines the default plugin settings inherited by child projects. -->
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <configuration>
+            <!-- <forkMode>always</forkMode> -->
+            <systemProperties combine.children="append">
+              <property>
+                <name>java.io.tmpdir</name>
+                <value>${basedir}/target</value>
+              </property>
+              <property>
+                <name>java.net.preferIPv4Stack</name>
+                <value>${jgroups.preferIpv4}</value>
+              </property>
+              <property>
+                <name>java.net.preferIPv6Addresses</name>
+                <value>${jgroups.preferIpv6}</value>
+              </property>
+            </systemProperties>
+            <argLine>-Xmx1024M ${debug.argline} -XX:MaxPermSize=256M</argLine>
+            <runOrder>alphabetical</runOrder>
+          </configuration>
+        </plugin>
+        <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+        <plugin>
+          <groupId>org.eclipse.m2e</groupId>
+          <artifactId>lifecycle-mapping</artifactId>
+          <version>1.0.0</version>
+          <configuration>
+            <lifecycleMappingMetadata>
+              <pluginExecutions>
+                <pluginExecution>
+                  <pluginExecutionFilter>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-antrun-plugin</artifactId>
+                    <versionRange>[1.6,)</versionRange>
+                    <goals>
+                      <goal>run</goal>
+                    </goals>
+                  </pluginExecutionFilter>
+                  <action>
+                    <ignore></ignore>
+                  </action>
+                </pluginExecution>
+              </pluginExecutions>
+            </lifecycleMappingMetadata>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
+
   <repositories>
     <repository>
       <id>jboss-public-repository-group</id>
@@ -183,26 +253,26 @@
           <scope>provided</scope>
         </dependency>
         <!--
-             Managed container.
-             Uncomment to launch JBossAS in the mvn test phase.
+          Managed container.
+          Uncomment to launch JBossAS in the mvn test phase.
+        -->
 
         <dependency>
           <groupId>org.jboss.as</groupId>
           <artifactId>jboss-as-arquillian-container-managed</artifactId>
           <scope>test</scope>
         </dependency>
-        -->
         <!--
-             Remote container.
-             Uncomment for remote container.
-             JBossAS must be up and running.
-             Useful for remote debugging.
-        -->
-        <dependency>
+          Remote container.
+          Uncomment for remote container.
+          JBossAS must be up and running.
+          Useful for remote debugging.
+          <dependency>
           <groupId>org.jboss.as</groupId>
           <artifactId>jboss-as-arquillian-container-remote</artifactId>
           <scope>test</scope>
-        </dependency>
+          </dependency>
+        -->
 
         <dependency>
           <groupId>org.jboss.arquillian.protocol</groupId>
